# QA-App-Allure

./: CLA BEV SR.json  CreateAPIandXHR.py  CreateDriver.py  Last Seen SRP.json  QA App Unittest.py  QAAppAllure.py  index.html  pyproject.toml
194/: index.html
245/: index.html
247/: index.html
248/: index.html
249/: index.html
250/: index.html
252/: index.html
254/: index.html
256/: index.html
257/: index.html
258/: index.html
259/: index.html
260/: index.html
261/: index.html
262/: index.html
263/: index.html
264/: index.html
268/: index.html
269/: index.html
270/: index.html
271/: index.html
272/: index.html
273/: index.html
274/: index.html
275/: index.html
276/: index.html
277/: index.html
278/: index.html
279/: index.html
280/: index.html
281/: index.html
282/: index.html
283/: index.html
284/: index.html
285/: index.html
73/: index.html
88/: index.html
89/: index.html
91/: index.html
92/: index.html
93/: index.html
94/: index.html
95/: index.html
App/: CTAHandlerDOM.py  CreateDriver.py  QA App Unittest.py  QAAppAllure.py  VerifyPersonalizationAndCapture.py  vehicle_api.py
TestsCodes/: LastConfigCompleted_test.py  LastSeenPDP_test.py  PersonalizedCTA2_test.py  PersonalizedCTA3_test.py  PersonalizedCTA4_test.py  bfv1_test.py  test_LastConfigStarted.py  test_LastSeenPDP.py  test_LastSeenSRP.py  test_bfv1.py  test_bfv2.py  test_bfv3.py
allure-results/: 00121120-34e1-4038-851a-d6a7eeddaf5a-attachment.txt  01976a99-8a4a-4f63-b96a-1912b6930b82-result.json  (+1052 more)
data/: behaviors.csv  (+6 more)
(+10834 files in other folders)
