[project]
name = "qa-allure-reporting"
version = "0.1.0"
description = "Personalization use cases QA testing"
authors = [
    {name = "Luis Sepulveda"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest (>=2.14.0,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
